# quant-estate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  annunci_info.csv  milano_links.csv  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: immobiliare.csv  immobiliare.json
notebooks/: Similarity_reserach_algorithm.ipynb  im_pipeline_ids.ipynb  im_pipeline_ids_parallel.ipynb  im_pipeline_listing.ipynb  im_pipeline_mapping.ipynb  im_test_id.ipynb  im_test_listing.ipynb  immobiliare_scraper_test.ipynb  immobiliare_scraper_test2.ipynb  model_test.ipynb  model_visualizer.ipynb  neo4j_tutorial.ipynb  pymongo_tutorial.ipynb
sources/: __init__.py  exceptions.py
sources/config/: __init__.py  config_manager.py  logging.yaml  manager.py
sources/config/connectors/immobiliare/: default.yaml  mongodb.yaml
sources/config/default/: default_immobiliare.yaml  default_logging.yaml
sources/config/model/: __init__.py  scraper_settings.py  storage_settings.py
sources/config_v2/: ENVIRONMENT_VARIABLES.md  __init__.py  pydantic_config_manager.py  settings.py
sources/config_v2/default/: default_logging.yaml  default_scrapers.yaml  mongodb.template.yaml  mongodb.yaml
sources/configs/: config_manager.py  logging.yaml
sources/connectors/: __init__.py  abstract_scraper.py  base.py  base_connector.py  base_scraper.py  base_storage.py  config.py  connector.py  selenium_scraper.py
sources/connectors/immobiliare/: __init__.py  connector.py  exceptions.py  immobiliare_scraper_test.ipynb  listing_scraper.py  models.py  scraper.py  scraper_ids.py  storage.py  test_storage.py
sources/connectors/immobiliare/config/: __init__.py  default.yaml  mongodb.template.yaml
sources/connectors/storage/: __init__.py  abstract_storage.py  file_storage.py  mongo_storage.py
sources/datamodel/: __init__.py  base_datamodel.py  base_model.py  enumerations.py  listing_details.py  listing_id.py  listing_record.py  real_estate.py  real_estate_listing.py
sources/logging/: __init__.py  logging.py  logging_utils.py
sources/logging_utils/: __init__.py  logger.py  logging_utils.py
sources/mappers/: __init__.py  etl_pipeline_prototype copy.py  immobiliare_enum_mapper.py  immobiliare_listing_mapper.py
sources/resources/: config.dev.env  default_scrapers.yaml  logging.yaml  milano_links.csv  scraper_imm_id.dev.env  scraper_imm_listing.dev.env  template_csv_storage.dev.env  template_mongo_storage.dev.env
sources/scrapers/: __init__.py  selenium_scraper.py
sources/scrapers/immobiliare/: __init__.py  listing_scraper.py  scraper_ids.py  scraper_ids_backup.py  scraper_ids_data.py  scraper_ids_icon.py  scraper_listing.py
sources/scrapers/storage/: mongo_storage.py
sources/storage/: __init__.py  abstract_storage.py  file_storage.py  mongo_storage.py
sources/tutorials/: neo4j_tutorial.ipynb  pymongo_tutorial.ipynb
sources/utils/: __init__.py  logging.py
tests/: test_selenium_setup.py
tutorials/: neo4j_tutorial.ipynb  pymongo_tutorial.ipynb
