[project]
name = "quant-estate"
version = "0.1.0"
description = "Real estate data collection and analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib>=3.10.3",
    "neo4j>=5.28.1",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "yfinance>=0.2.61",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
dev = [
    "nb-clean>=4.0.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sources"]

[tool.setuptools.package-data]
"sources.config" = ["*.yaml"]
"sources.config.connectors.immobiliare" = ["*.yaml"]
