[project]
name = "quant-estate"
version = "0.1.0"
description = "Real estate data collection and analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = "BSL-1.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "matplotlib>=3.10.3",
    "neo4j>=5.28.1",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "yfinance>=0.2.61",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
    "undetected-chromedriver>=3.5.5",
    "nb-clean>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Repository = "https://github.com/GabrieleDiCorato/quant-estate"
Documentation = "https://github.com/GabrieleDiCorato/quant-estate#readme"
Issues = "https://github.com/GabrieleDiCorato/quant-estate/issues"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sources"]

[tool.setuptools.package-data]
"sources.config" = ["*.yaml"]
"sources.config.connectors.immobiliare" = ["*.yaml"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
