[project]
name = "quant-estate"
version = "1.0.1-dev"
description = "Real estate data collection and analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = "BSL-1.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "matplotlib>=3.10.3",
    "neo4j>=5.28.1",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
    "nb-clean>=4.0.1",
    "undetected-chromedriver>=3.5.5",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "ruff>=0.5.6",
    "pre-commit>=3.7.1",
]

[project.urls]
Repository = "https://github.com/GabrieleDiCorato/quant-estate"
Documentation = "https://github.com/GabrieleDiCorato/quant-estate#readme"
Issues = "https://github.com/GabrieleDiCorato/quant-estate/issues"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sources"]

[tool.setuptools.package-data]
"sources.config" = ["*.yaml"]

[tool.ruff]
src = ["sources", "tests"]
line-length = 150
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "UP",  # pyupgrade
    "B",   # bugbear (sane safety checks)
]
ignore = []
fixable = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # allow re-export pattern in package __init__

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"
